# simple_svg

./: .gitignore  CMakeLists.txt  TODO.txt  main_1.0.0.cpp  simple_svg_1.0.0.hpp
tests/: simple_svg_test.cpp
